# Flux

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Flux_PRD_v0.1.0.md  LICENSE  NOTICE.md  README.md  RELEASE_NOTES_v0.1.0.md  SKILL.md  TODO.md  deny.toml  flake.nix  spacecraft-software-rename-prompt.md
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: PQC.md  SAFETY.md
man/: dns.1
packaging/arch/: PKGBUILD
src/: error.rs  main.rs
src/agent/: mcp.rs  mod.rs
src/backends/: bsd.rs  mod.rs  networkmanager.rs  nixos.rs  resolvconf.rs  resolvectl.rs  stub.rs  systemd.rs
src/backups/: mod.rs
src/cli/: mod.rs  schema.rs
src/detection/: mod.rs
src/ntp/: mod.rs
src/orchestrator/: mod.rs
src/output/: envelope.rs  human.rs  mod.rs  mode.rs  trim.rs
src/privilege/: mod.rs
src/registry/: mod.rs  providers.rs
src/tui/: app.rs  mod.rs  theme.rs
src/tui/screens/: about.rs  confirm.rs  main_menu.rs  mod.rs  protocol.rs  provider.rs  status.rs  tier.rs
src/validate/: mod.rs
src/vpn/: adguard.rs  mod.rs  warp.rs
tests/: integration_test.rs
