[package]
name = "flux"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-or-later"
authors = ["Mohamed Hammad <Mohamed.Hammad@SpacecraftSoftware.org>"]
description = "DNS selector and network configurator CLI for Linux and BSD"
repository = "https://github.com/Spacecraft-Software/flux"
homepage = "https://Flux.SpacecraftSoftware.org/"
keywords = ["dns", "dot", "doh", "doq", "networking"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "dns"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jiff = { version = "0.2", features = ["serde"] }
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "process", "time", "fs", "io-util"] }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nix = { version = "0.29", features = ["fs", "process", "user"] }
dirs = "6.0"
rmcp = { version = "1.6.0", features = ["server", "transport-io", "macros"] }

[features]
default = ["tui"]
tui = ["ratatui", "crossterm"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
